feat: implement exception for bad claim inside jwt token
